Src/Audio/AL/Generated/AL.Generated.cs

        
        /// <summary>
        /// Set Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alSource3f", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Source(uint source, int param, float value1, float value2, float value3);
        
        /// <summary>
        /// Set Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourcefv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Source(uint source, int param, float[] values);
        
        /// <summary>
        /// Set Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourcei", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Source(uint source, SourceInt param, int value);
        
        /// <summary>
        /// Set Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alSource3i", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Source(uint source, int param, int value1, int value2, int value3);
        
        /// <summary>
        /// Set Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourceiv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Source(uint source, int param, int[] values);
        
        /// <summary>
        /// Get Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetSourcef", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetSource(uint source, SourceFloat param, out float value);
        
        /// <summary>
        /// Get Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetSource3f", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetSource(uint source, int param, ref float value1, ref float value2, ref float value3);
        
        /// <summary>
        /// Get Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetSourcefv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetSource(uint source, int param, float[] values);
        
        /// <summary>
        /// Get Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetSourcei", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetSource(uint source, GetSourceInt param, out int value);
        
        /// <summary>
        /// Get Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetSource3i", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetSource(uint source, int param, ref int value1, ref int value2, ref int value3);
        
        /// <summary>
        /// Get Source parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetSourceiv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetSource(uint source, int param, int[] values);
        
        /// <summary>
        /// Play, replay, or resume (if paused) a list of Sources
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourcePlayv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourcePlay(int n, uint[] sources);
        
        /// <summary>
        /// Stop a list of Sources
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourceStopv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourceStop(int n, uint[] sources);
        
        /// <summary>
        /// Rewind a list of Sources
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourceRewindv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourceRewind(int n, uint[] sources);
        
        /// <summary>
        /// Pause a list of Sources
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourcePausev", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourcePause(int n, uint[] sources);
        
        /// <summary>
        /// Play, replay, or resume a Source
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourcePlay", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourcePlay(uint source);
        
        /// <summary>
        /// Stop a Source
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourceStop", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourceStop(uint source);
        
        /// <summary>
        /// Rewind a Source (set playback postiton to beginning)
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourceRewind", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourceRewind(uint source);
        
        /// <summary>
        /// Pause a Source
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourcePause", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourcePause(uint source);
        
        /// <summary>
        /// Queue buffers onto a source
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourceQueueBuffers", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourceQueueBuffers(uint source, int nb, ref uint buffers);
        
        /// <summary>
        /// Unqueue processed buffers from a source
        /// </summary>
        [DllImport(Library, EntryPoint = "alSourceUnqueueBuffers", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SourceUnqueueBuffers(uint source, int nb, ref uint buffers);
        
        /// <summary>
        /// Create Buffer objects
        /// </summary>
        [DllImport(Library, EntryPoint = "alGenBuffers", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GenBuffers(int n, ref uint buffers);
        
        /// <summary>
        /// Delete Buffer objects
        /// </summary>
        [DllImport(Library, EntryPoint = "alDeleteBuffers", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DeleteBuffers(int n, ref uint buffers);
        
        /// <summary>
        /// Verify a handle is a valid Buffer
        /// </summary>
        [DllImport(Library, EntryPoint = "alIsBuffer", CallingConvention = CallingConvention.Cdecl)]
        [return:MarshalAs(UnmanagedType.I1)]
        public static extern bool IsBuffer(uint buffer);
        
        /// <summary>
        /// Specifies the data to be copied into a buffer
        /// </summary>
        [DllImport(Library, EntryPoint = "alBufferData", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BufferData(uint buffer, BufferFormat format, IntPtr data, int size, int freq);
        
        /// <summary>
        /// Set Buffer parameters,
        /// </summary>
        [DllImport(Library, EntryPoint = "alBufferf", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Buffer(uint buffer, int param, float value);
        
        /// <summary>
        /// Set Buffer parameters,
        /// </summary>
        [DllImport(Library, EntryPoint = "alBuffer3f", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Buffer(uint buffer, int param, float value1, float value2, float value3);
        
        /// <summary>
        /// Set Buffer parameters,
        /// </summary>
        [DllImport(Library, EntryPoint = "alBufferfv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Buffer(uint buffer, int param, float[] values);
        
        /// <summary>
        /// Set Buffer parameters,
        /// </summary>
        [DllImport(Library, EntryPoint = "alBufferi", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Buffer(uint buffer, int param, int value);
        
        /// <summary>
        /// Set Buffer parameters,
        /// </summary>
        [DllImport(Library, EntryPoint = "alBuffer3i", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Buffer(uint buffer, int param, int value1, int value2, int value3);
        
        /// <summary>
        /// Set Buffer parameters,
        /// </summary>
        [DllImport(Library, EntryPoint = "alBufferiv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Buffer(uint buffer, int param, int[] values);
        
        /// <summary>
        /// Get Buffer parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetBufferf", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetBuffer(uint buffer, int param, out float value);
        
        /// <summary>
        /// Get Buffer parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetBuffer3f", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetBuffer(uint buffer, int param, ref float value1, ref float value2, ref float value3);
        
        /// <summary>
        /// Get Buffer parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetBufferfv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetBuffer(uint buffer, int param, float[] values);
        
        /// <summary>
        /// Get Buffer parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetBufferi", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetBuffer(uint buffer, GetBufferInt param, out int value);
        
        /// <summary>
        /// Get Buffer parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetBuffer3i", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetBuffer(uint buffer, int param, ref int value1, ref int value2, ref int value3);
        
        /// <summary>
        /// Get Buffer parameters.
        /// </summary>
        [DllImport(Library, EntryPoint = "alGetBufferiv", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetBuffer(uint buffer, int param, int[] values);
    }
}
